Validate empty values

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <div class="question-block">
               <h3 class="question-block__number">5</h3>
               <h4 class="question-block__title">перевод средств</h4>
-              <p class="question-block__text">После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету</p>
+              <p class="question-block__text">
+                После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету
+              </p>
             </div>
           </div>
 
