--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -64,26 +64,49 @@
                     type="text"
                     name="cafe-work-hours"
                     placeholder="например: 10:00-13:00, 13:00-19:00"
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="cafe-address">адрес заведения</label>
-                  <input class="form__field" id="cafe-address" type="text" name="cafe-address" placeholder="каждый адрес с новой строки" value="" />
+                  <input
+                    class="form__field"
+                    id="cafe-address"
+                    type="text"
+                    name="cafe-address"
+                    placeholder="каждый адрес с новой строки"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
-                  <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
+                  <input
+                    class="form__field"
+                    id="contact-name"
+                    type="text"
+                    name="contact-name"
+                    placeholder="введите ФИО"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона заведения</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">ссылка на сайт</label>
-                  <input class="form__field" id="cafe-site" type="text" name="cafe-site" value="https://" />
+                  <input class="form__field" id="cafe-site" type="text" name="cafe-site" value="https://" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
@@ -95,7 +118,9 @@
                     name="cafe-social-links"
                     placeholder="каждую ссылку с новой строки"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
@@ -107,14 +132,20 @@
                     placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
                     cols="30"
                     rows="3"
+                    onkeyup="clearErrors(this)"
                   ></textarea>
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
             <button type="button" class="form-input form__control" onclick="location.href='../pages/cafeForm.html';">назад</button>
-            <button type="submit" form="cafeContacts" class="form__control_type_submit form-input form__control form__control_active"></button>
+            <button
+              type="submit"
+              form="cafeContacts"
+              class="form__control_type_submit form-input form__control form__control_active"
+            ></button>
           </div>
         </div>
       </main>
@@ -170,5 +201,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/validator.js"></script>
   </body>
 </html>
