--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -53,20 +53,42 @@
                 <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
               </div>
             </div>
-            <form class="form__form" name="category__form">
+            <form class="form__form" id="master-class-step3" name="category__form">
               <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="cafe-clock">время проведения</label>
-                  <input class="form__field" id="cafe-clock" type="text" name="cafe-clock" placeholder="например: 18:00-22:00" value="" />
+                  <input
+                    class="form__field"
+                    id="cafe-clock"
+                    type="text"
+                    name="cafe-clock"
+                    placeholder="например: 18:00-22:00"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="cafe-address">адрес проведения</label>
-                  <input class="form__field" id="cafe-address" type="text" name="cafe-address" placeholder="каждый адрес с новой строки" value="" />
+                  <input
+                    class="form__field"
+                    id="cafe-address"
+                    type="text"
+                    name="cafe-address"
+                    placeholder="каждый адрес с новой строки"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="participation-price">стоимость участия</label>
                   <input
@@ -76,8 +98,11 @@
                     name="participation-price"
                     placeholder="укажите стоимость в рублях"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
@@ -85,16 +110,26 @@
                     name="cafe-description"
                     id="cafe-description"
                     placeholder="Напишите небольшой анонс вашего местер-класса или лекции. Чем мероприятие будет полезно, чему посвящено"
+                    onkeyup="clearErrors(this)"
                   ></textarea>
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form__control form__control_type_back" onclick="location.href='../pages/master-class.html';">
+            <button
+              type="button"
+              class="form-input form__control form__control_type_back"
+              onclick="location.href='../pages/master-class.html';"
+            >
               назад
             </button>
-            <button type="submit" class="form-input form__control form__control_type_submit form__control_active"></button>
+            <button
+              type="submit"
+              form="master-class-step3"
+              class="form-input form__control form__control_type_submit form__control_active"
+            ></button>
           </div>
         </div>
       </main>
@@ -150,5 +185,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/validator.js"></script>
   </body>
 </html>
