--- a/pages/other.html
+++ b/pages/other.html
@@ -83,37 +83,72 @@
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label">город</label>
-                  <select class="form__field form__list">
+                  <select class="form__field form__list" onkeyup="clearErrors(this)">
                     <option value="" style="display: none">выберите из списка</option>
                     <option>Москва</option>
                     <option>Санкт-Петербург</option>
                   </select>
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="cafe-name">название мероприятия</label>
-                  <input class="form__field" id="cafe-name" type="text" name="cafe-name" placeholder="введите название мероприятия" value="" />
+                  <input
+                    class="form__field"
+                    id="cafe-name"
+                    type="text"
+                    name="cafe-name"
+                    placeholder="введите название мероприятия"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="event-date">дата проведения</label>
-                  <input class="form__field" id="event-date" type="text" name="event-date" placeholder="укажите дату в формате дд.мм.гггг" value="" />
+                  <input
+                    class="form__field"
+                    id="event-date"
+                    type="text"
+                    name="event-date"
+                    placeholder="укажите дату в формате дд.мм.гггг"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
-                  <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
+                  <input
+                    class="form__field"
+                    id="contact-name"
+                    type="text"
+                    name="contact-name"
+                    placeholder="введите ФИО"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='../pages/category.html';">назад</button>
+            <button
+              type="button"
+              class="form__control_type_back form-input form__control"
+              onclick="location.href='../pages/category.html';"
+            >
+              назад
+            </button>
             <button type="submit" form="other" class="form__control_type_submit form-input form__control form__control_active"></button>
           </div>
         </div>
@@ -170,5 +205,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/validator.js"></script>
   </body>
 </html>
