--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -62,16 +62,19 @@
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
               </div>
+
               <fieldset class="form__labeled-container form__bottom-line">
                 <div class="form__unit">
                   <label class="form__label">город</label>
-                  <select class="form__field form__city-list">
+                  <select class="form__field form__city-list" onkeyup="clearErrors(this)">
                     <option value="" style="display: none">Выберите из списка</option>
                     <option>Москва</option>
                     <option>Санкт-Петербург</option>
                   </select>
+                  <span class="form__error"></span>
                 </div>
-                <div class="form__unit ">
+
+                <div class="form__unit">
                   <label class="form__label" for="party-name">название мероприятия</label>
                   <input
                     class="form__field"
@@ -80,12 +83,14 @@
                     name="party-name"
                     placeholder="введите название"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
 
-              <fieldset class="form__radio-block form__bottom-line ">
-                <div class="form__unit ">
+              <fieldset class="form__radio-block form__bottom-line">
+                <div class="form__unit">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon form__radio-icon_checked"></span>
                     <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
@@ -93,6 +98,7 @@
                   </label>
                   <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon"></span>
@@ -113,8 +119,11 @@
                     name="event-date"
                     placeholder="укажите дату в формате дд.мм.гггг"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
                   <input
@@ -124,17 +133,26 @@
                     name="contact-name"
                     placeholder="введите ФИО"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
+
           <div class="form__controls">
-            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='../pages/category.html';">
+            <button
+              type="button"
+              class="form__control_type_back form-input form__control"
+              onclick="location.href='../pages/category.html';"
+            >
               назад
             </button>
             <button type="submit" form="party" class="form__control_type_submit form-input form__control form__control_active"></button>
@@ -194,5 +212,6 @@
       </footer>
     </div>
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/validator.js"></script>
   </body>
 </html>
