--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -57,16 +57,38 @@
               <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="party-clock">время проведения</label>
-                  <input class="form__field" id="party-clock" type="text" name="party-clock" placeholder="например: 18:00-22:00" value="" />
+                  <input
+                    class="form__field"
+                    id="party-clock"
+                    type="text"
+                    name="party-clock"
+                    placeholder="например: 18:00-22:00"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="party-address">адрес проведения</label>
-                  <input class="form__field" id="party-address" type="text" name="party-address" placeholder="каждый адрес с новой строки" value="" />
+                  <input
+                    class="form__field"
+                    id="party-address"
+                    type="text"
+                    name="party-address"
+                    placeholder="каждый адрес с новой строки"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="participate-price">стоимость участия</label>
                   <input
@@ -76,16 +98,38 @@
                     name="participate-price"
                     placeholder="укажите стоимость в рублях"
                     value=""
+                    onkeyup="clearErrors(this)"
                   />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="contact-website">ссылка на сайт</label>
-                  <input class="form__field" id="contact-website" type="text" name="contact-website" value="https://" />
+                  <input
+                    class="form__field"
+                    id="contact-website"
+                    type="text"
+                    name="contact-website"
+                    value="https://"
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="party-links">ссылки на соцсети</label>
-                  <input class="form__field" id="party-links" type="text" name="party-links" placeholder="каждую ссылку с новой строки" value="" />
+                  <input
+                    class="form__field"
+                    id="party-links"
+                    type="text"
+                    name="party-links"
+                    placeholder="каждую ссылку с новой строки"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
                 </div>
+
                 <div class="form__unit">
                   <label class="form__label" for="party-description">описание</label>
                   <textarea
@@ -93,16 +137,26 @@
                     name="party-description"
                     id="party-description"
                     placeholder="Напишите небольшой анонс вашего мероприятия. Чем оно будет полезно/чему посвящено"
+                    onkeyup="clearErrors(this)"
                   ></textarea>
+                  <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='../pages/partyForm.html';">
+            <button
+              type="button"
+              class="form__control_type_back form-input form__control"
+              onclick="location.href='../pages/partyForm.html';"
+            >
               назад
             </button>
-            <button type="submit" form="partyContacts" class="form__control_type_submit form-input form__control form__control_active"></button>
+            <button
+              type="submit"
+              form="partyContacts"
+              class="form__control_type_submit form-input form__control form__control_active"
+            ></button>
           </div>
         </div>
       </main>
@@ -158,5 +212,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/validator.js"></script>
   </body>
 </html>
