Fix city error clear

--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -81,7 +81,7 @@
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label">город</label>
-                  <select class="form__field form__list" onkeyup="clearErrors(this)">
+                  <select class="form__field form__list" onfocus="clearErrors(this)">
                     <option value="" style="display: none">выберите из списка</option>
                     <option>Москва</option>
                     <option>Санкт-Петербург</option>
