--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -66,7 +66,7 @@
               <fieldset class="form__labeled-container form__bottom-line">
                 <div class="form__unit">
                   <label class="form__label">город</label>
-                  <select class="form__field form__city-list" onkeyup="clearErrors(this)">
+                  <select class="form__field form__city-list" onfocus="clearErrors(this)">
                     <option value="" style="display: none">Выберите из списка</option>
                     <option>Москва</option>
                     <option>Санкт-Петербург</option>
