--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -99,7 +99,16 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона заведения</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <input
+                    class="form__field"
+                    id="contact-number"
+                    type="tel"
+                    name="contact-number"
+                    value="+7 ("
+                    oninput="formatPhone(event, this)"
+                    onblur="validatePhone(this)"
+                    onkeyup="clearErrors(this)"
+                  />
                   <span class="form__error"></span>
                 </div>
 
@@ -140,7 +149,7 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form__control" onclick="location.href='../pages/cafeForm.html';">назад</button>
+            <button type="button" class="form-input form__control" onclick="location.href='cafeForm.html';">назад</button>
             <button
               type="submit"
               form="cafeContacts"
@@ -201,6 +210,6 @@
         </div>
       </footer>
     </div>
-    <script src="../scripts/validator.js"></script>
+    <script src="../scripts/form-validator.js"></script>
   </body>
 </html>
