--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -85,7 +85,16 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <input
+                    class="form__field"
+                    id="contact-number"
+                    type="tel"
+                    name="contact-number"
+                    value="+7 ("
+                    oninput="formatPhone(event, this)"
+                    onblur="validatePhone(this)"
+                    onkeyup="clearErrors(this)"
+                  />
                   <span class="form__error"></span>
                 </div>
 
@@ -118,11 +127,7 @@
             </form>
           </div>
           <div class="form__controls">
-            <button
-              type="button"
-              class="form-input form__control form__control_type_back"
-              onclick="location.href='../pages/master-class.html';"
-            >
+            <button type="button" class="form-input form__control form__control_type_back" onclick="location.href='master-class.html';">
               назад
             </button>
             <button
@@ -185,6 +190,6 @@
         </div>
       </footer>
     </div>
-    <script src="../scripts/validator.js"></script>
+    <script src="../scripts/form-validator.js"></script>
   </body>
 </html>
