--- a/pages/other.html
+++ b/pages/other.html
@@ -135,18 +135,23 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
-                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" onkeyup="clearErrors(this)" />
+                  <input
+                    class="form__field"
+                    id="contact-number"
+                    type="tel"
+                    name="contact-number"
+                    value="+7 ("
+                    oninput="formatPhone(event, this)"
+                    onblur="validatePhone(this)"
+                    onkeyup="clearErrors(this)"
+                  />
                   <span class="form__error"></span>
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button
-              type="button"
-              class="form__control_type_back form-input form__control"
-              onclick="location.href='../pages/category.html';"
-            >
+            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='category.html';">
               назад
             </button>
             <button type="submit" form="other" class="form__control_type_submit form-input form__control form__control_active"></button>
@@ -205,6 +210,6 @@
         </div>
       </footer>
     </div>
-    <script src="../scripts/validator.js"></script>
+    <script src="../scripts/form-validator.js"></script>
   </body>
 </html>
