--- a/pages/other.html
+++ b/pages/other.html
@@ -63,7 +63,7 @@
                 </div>
               </div>
 
-              <fieldset class="form__radio-block form__bottom-line">
+              <fieldset class="form__radio-block form__bottom-line .form__radio-block_subtitle_no">
                 <div class="form__unit">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon form__radio-icon_checked"></span>
