--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -61,7 +61,7 @@
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
               </div>
-              <fieldset class="form__radio-block form__bottom-line">
+              <fieldset class="form__radio-block form__bottom-line form__radio-block_subtitle_no">
                 <div class="form__unit">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon form__radio-icon_checked"></span>
