--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -67,7 +67,7 @@
                 <div class="form__unit">
                   <label class="form__label">город</label>
                   <select class="form__field form__city-list" onfocus="clearErrors(this)">
-                    <option value="" style="display: none">Выберите из списка</option>
+                    <option value="" style="display: none">выберите из списка</option>
                     <option>Москва</option>
                     <option>Санкт-Петербург</option>
                   </select>
