--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -61,18 +61,19 @@
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
               </div>
-              <fieldset class="form__radio-block form__bottom-line form__radio-block_subtitle_no">
-                <div class="form__unit">
+
+              <fieldset class="form__radio-block form__bottom-line">
+                <div class="form__radio-container">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon form__radio-icon_checked"></span>
-                    <input class="form__radio" type="radio" id="master-class-online" name="master-class-online" value="online" checked />
+                    <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
                     <span>онлайн</span>
                   </label>
                 </div>
-                <div class="form__unit">
+                <div class="form__radio-container">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon"></span>
-                    <input class="form__radio" type="radio" id="master-class-offline" name="master-class-offline" value="offline" />
+                    <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
                     <span>оффлайн</span>
                   </label>
                 </div>
