--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -90,7 +90,7 @@
               </fieldset>
 
               <fieldset class="form__radio-block form__bottom-line">
-                <div class="form__unit">
+                <div class="form__radio-container">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon form__radio-icon_checked"></span>
                     <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
@@ -98,14 +98,13 @@
                   </label>
                   <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
                 </div>
-
-                <div class="form__unit">
+                <div class="form__radio-container">
                   <label class="form__radio-unit">
                     <span class="form__radio-icon"></span>
                     <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
                     <span>закрытое мероприятие</span>
                   </label>
-                  <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
+                  <p class="form__radio-subtitle form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
                 </div>
               </fieldset>
 
